--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,19 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
 </head>
+
 <body>
-  
-  <div ng-app="socially">
-    <meteor-include src="loginButtons"></meteor-include>
-    <h1>
-      <a href="/parties">Home</a>
-    </h1>
-    <div ui-view></div>
+  <div ng-app="socially" layout="column">
+    <md-toolbar md-scroll-shrink layout="row" layout-align="start center" layout-padding>
+      <div>
+        <a href="/parties">Parties</a>
+      </div>
+      <span flex></span>
+      <div class="navbar-right navbar-text">
+        <meteor-include src="loginButtons"></meteor-include>
+      </div>
+    </md-toolbar>
+    <div ui-view class="container-fluid"></div>
   </div>
-  
 </body>
